# tarski

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  CHANGELOG.md  HEADER  MANIFEST.in  README.md  SConstruct  pyproject.toml  pytest.ini  readme.md  run_tests  setup.py  tox.ini
.github/workflows/: code-style.yml  codeql-analysis.yml  coverage.yml  publish-to-pypi.yml  style-docs-grammars.yml  unit-tests.yml
doc/: design.md  development.md  releasing.md
docs/: advanced-topics.rst  api.rst  conf.py  development.rst  getting-started.rst  index.rst  installation.md  limitations.md  readme.md  requirements.txt  use-cases.rst
docs/development/: design.md  development.md  documentation.md  releasing.md
docs/notebooks/: k0-compilation.ipynb  (+17 more)
examples/: README.md  blocksworld.py
notebooks/: 001_sorts_and_constant_symbols.ipynb  002_functions_and_predicates.ipynb  003_terms_and_formulas.ipynb  003_terms_formulas_and_interpretations.ipynb  004_interpretations.ipynb  005_functional_strips.ipynb  006_parsing_pddl_like.ipynb  007_parsing_and_processing_pddl.ipynb  008_grounding_and_k0.ipynb  008_reactions_and_events.ipynb  101_advanced_tutorial_theories.ipynb  901_double_integrator_model.ipynb  index.ipynb
scripts/: build-docs  build-grammars  get-benchmarks  install-conda  lint  linter  report-coverage  run-mypy  run_tests.bat
tarski/: __init__.py  _const.py  _errors.py  _formulas.py  _function.py  _language.py  _model.py  _predicate.py  _relational.py  _sorts.py  _terms.py
tests/: __init__.py  test_utils.py
(+308 files in other folders)
