# NOTE: Use single-quoted strings in TOML for regular expressions.

[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel", "Cython"]  # PEP 508 specifications.

[tool.black]
line-length = 120
# target-version = ['py27', 'py35', 'py36', 'py37', 'py38']
include = '\.pyi?$'

[tool.pytest.ini_options]
# Logs will be shown for failed test:
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
addopts = "-rsxX -q"

markers = [
    "pddl",
    "sas",
]